# llzk-lib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  flake.nix
include/: CMakeLists.txt
include/Dialect/: InitDialects.h
include/Dialect/ZKIR/IR/: Attrs.h  Attrs.td  CMakeLists.txt  Dialect.h  Dialect.td  Enums.h  Enums.td  FuncOps.td  OpInterfaces.td  Ops.h  Ops.td  OpsBase.td  Types.h  Types.td
include/Dialect/ZKIR/Transforms/: ZKIRPasses.h  ZKIRPasses.td
include/Dialect/ZKIR/Util/: SymbolHelper.h
include/llzk-c/: Builder.h  Constants.h  InitDialects.h  Support.h  Transforms.h  Typing.h  Validators.h
include/llzk-c/Dialect/: Array.h  Bool.h  Cast.h  Constrain.h  Felt.h  Function.h  Global.h  Include.h  LLZK.h  Polymorphic.h  String.h  Struct.h  Undef.h
include/llzk/Analysis/: AbstractLatticeValue.h  AnalysisPassEnums.h  AnalysisPasses.h  AnalysisPasses.td  AnalysisWrappers.h  CMakeLists.txt  CallGraph.h  CallGraphAnalyses.h  ConstrainRef.h  ConstrainRefLattice.h  ConstraintDependencyGraph.h  DenseAnalysis.h  IntervalAnalysis.h  SymbolDefTree.h  SymbolUseGraph.h
include/llzk/CAPI/: Builder.h  Support.h
include/llzk/Config/: CMakeLists.txt  Config.h.in
include/llzk/Dialect/: InitDialects.h
include/llzk/Dialect/Shared/: Builders.h  OpHelpers.h  OpTraits.td  OpsBase.td
include/llzk/Pass/: PassBase.h  PassBase.td
include/llzk/Transforms/: CMakeLists.txt  LLZKLoweringUtils.h  LLZKTransformationPasses.h  LLZKTransformationPasses.td
include/llzk/Util/: APIntHelper.h  AffineHelper.h  BuilderHelper.h  Compare.h  Concepts.h  Constants.h  Debug.h  ErrorHelper.h  Hash.h  StreamHelper.h  SymbolHelper.h  SymbolLookup.h  SymbolTableLLZK.h  TypeHelper.h
include/llzk/Validators/: CMakeLists.txt  LLZKValidationPasses.h  LLZKValidationPasses.td
include/zkir/Dialect/: InitDialects.h
lib/: CMakeLists.txt  InitDialects.cpp
lib/Analysis/: AnalysisPassEnums.cpp  CMakeLists.txt  CallGraph.cpp  CallGraphAnalyses.cpp  CallGraphPasses.cpp  ConstrainRef.cpp  ConstrainRefLattice.cpp  ConstraintDependencyGraph.cpp  ConstraintDependencyGraphPass.cpp  DenseAnalysis.cpp  IntervalAnalysis.cpp  IntervalAnalysisPass.cpp  SymbolDefTree.cpp  SymbolDefTreePass.cpp  SymbolUseGraph.cpp  SymbolUseGraphPass.cpp
lib/Bindings/Python/: CMakeLists.txt  LLZKRegistration.cpp  ZKIRRegistration.cpp
lib/CAPI/: Builder.cpp  CMakeLists.txt  Constants.cpp  InitDialects.cpp  Transforms.cpp  Typing.cpp  Validators.cpp
lib/CAPI/Dialect/: Array.cpp  Bool.cpp  Cast.cpp  Constrain.cpp  Felt.cpp  Function.cpp  Global.cpp  Include.cpp  LLZK.cpp  Polymorphic.cpp  String.cpp  Struct.cpp  Undef.cpp
lib/Dialect/: CMakeLists.txt  InitDialects.cpp
lib/Dialect/Array/: CMakeLists.txt
lib/Dialect/Array/IR/: Dialect.cpp  Ops.cpp  Types.cpp
lib/Dialect/Array/Transforms/: ArrayToScalarPass.cpp
lib/Dialect/Array/Util/: ArrayTypeHelper.cpp
lib/Dialect/Bool/: CMakeLists.txt
lib/Dialect/Bool/IR/: Dialect.cpp  Enums.cpp  Ops.cpp
lib/Dialect/Cast/: CMakeLists.txt
lib/Dialect/Cast/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/Constrain/: CMakeLists.txt
lib/Dialect/Constrain/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/Felt/: CMakeLists.txt
lib/Dialect/Felt/IR/: Attrs.cpp  Dialect.cpp  Ops.cpp
lib/Dialect/Function/: CMakeLists.txt
lib/Dialect/Function/IR/: Dialect.cpp  OpTraits.cpp  Ops.cpp
lib/Dialect/Global/: CMakeLists.txt
lib/Dialect/Global/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/Include/: CMakeLists.txt
lib/Dialect/Include/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/Include/Transforms/: InlineIncludesPass.cpp
lib/Dialect/Include/Util/: IncludeHelper.cpp
lib/Dialect/LLZK/: CMakeLists.txt
lib/Dialect/LLZK/Analysis/: CallGraph.cpp  CallGraphAnalyses.cpp  CallGraphPasses.cpp  ConstrainRef.cpp  ConstrainRefLattice.cpp  ConstraintDependencyGraph.cpp  ConstraintDependencyGraphPass.cpp  DenseAnalysis.cpp  IntervalAnalysis.cpp  IntervalAnalysisPass.cpp
lib/Dialect/LLZK/IR/: AttributeHelper.cpp  Attrs.cpp  Builders.cpp  Dialect.cpp  Enums.cpp  FuncOps.cpp  Ops.cpp  Types.cpp  (+1 more)
lib/Dialect/Polymorphic/: CMakeLists.txt
lib/Dialect/Shared/: Builders.cpp  CMakeLists.txt
lib/Dialect/String/: CMakeLists.txt
lib/Dialect/Struct/: CMakeLists.txt
lib/Dialect/Undef/: CMakeLists.txt
lib/Dialect/ZKIR/: CMakeLists.txt
lib/Transforms/: CMakeLists.txt  LLZKLoweringUtils.cpp  LLZKPolyLoweringPass.cpp  LLZKR1CSLoweringPass.cpp  LLZKRedundantOperationEliminationPass.cpp  LLZKRedundantReadAndWriteEliminationPass.cpp  LLZKRocqPass.cpp  LLZKUnusedDeclarationEliminationPass.cpp  TransformationPassPipelines.cpp
lib/Util/: APIntHelper.cpp  AffineHelper.cpp  CMakeLists.txt  Debug.cpp  SymbolHelper.cpp  SymbolLookup.cpp  SymbolTableLLZK.cpp  TypeHelper.cpp
lib/Validators/: CMakeLists.txt  LLZKValidationPasses.cpp
python/: CMakeLists.txt
python/llzk/: __init__.py  registration.py
python/mlir/dialects/: LLZKOps.td  ZKIROps.td  llzk_dialect.py  zkir_dialect.py
python/zkir/: __init__.py  registration.py
r1cs/lib/r1cs/: Attrs.cpp  CMakeLists.txt  Types.cpp
tools/llzk-lsp-server/: CMakeLists.txt  llzk-lsp-server.cpp
tools/llzk-opt/: CMakeLists.txt  llzk-opt.cpp
tools/r1cs-opt/: CMakeLists.txt  r1cs-opt.cpp
tools/zkir-dump/: CMakeLists.txt  zkir-dump.cpp
tools/zkir-lsp-server/: CMakeLists.txt  zkir-lsp-server.cpp
tools/zkir-opt/: CMakeLists.txt  zkir-opt.cpp
unittests/: CMakeLists.txt  LLZKTestBase.h
unittests/Analysis/: CMakeLists.txt  CallGraphTests.cpp  IntervalTests.cpp
unittests/CAPI/: Builder.cpp  CAPITestBase.h  CMakeLists.txt  Constants.cpp  InitDialects.cpp  Transforms.cpp  Typing.cpp  Validators.cpp
unittests/CAPI/Dialect/: Array.cpp  Boolean.cpp  Cast.cpp  Felt.cpp  Function.cpp  Global.cpp  Include.cpp  LLZK.cpp  Polymorphic.cpp  String.cpp  Struct.cpp  Undef.cpp
unittests/IR/: BuildersTests.cpp  CMakeLists.txt  CallOpTests.cpp  CreateArrayOpTests.cpp  OpTestBase.h  TypesTests.cpp
unittests/Util/: ArrayTypeHelperTest.cpp  CMakeLists.txt  SymbolHelperTest.cpp
unittests/helloworld/: CMakeLists.txt  HelloWorldTest.cpp
(+594 files in other folders)
