function(llzk_gtest_suite target)
  gtest_discover_tests(${target})
  list(APPEND LLZK_UNITTESTS ${target})
  set(LLZK_UNITTESTS ${LLZK_UNITTESTS} CACHE INTERNAL "")
endfunction()

# Add subdirectories here
add_subdirectory(helloworld) # placeholder test

add_custom_target(check-unit
  DEPENDS ${LLZK_UNITTESTS}
  COMMAND "${CMAKE_COMMAND}" --build "${CMAKE_BINARY_DIR}" --target test
  COMMENT "Running the gtest-based unit tests"
)